# rust_ocr

./: Cargo.toml  high_quality_result.txt  readme.md  troubleshooting.md
src/: config.rs  error.rs  image_processing.rs  main.rs  ocr.rs  pdf.rs
