[package]
name = "rust_ocr_tool"
version = "0.2.0" # Version bump for new features
edition = "2021"

[dependencies]
# OCR and PDF processing
tesseract = "0.15"
pdfium-render = { version = "=0.8.17"}

image = "0.25"
tempfile = "3.10"
clap = { version = "4.5", features = ["derive"] }
log = "0.4"
env_logger = "0.11"
thiserror = "2.0.16" # Helper for creating custom errors
imageproc = "0.25" # <-- ADD THIS
